# Enigma

./: .gitignore  CMakeLists.txt  README.md  database.json  tests.http
backend/: CMakeLists.txt  database.json  robust_tests.http
backend/include/: User.hpp
backend/src/: Message.cpp  User.cpp  main.cpp
frontend/: login.html  login.script.js  login.style.css  main_page.html  main_page.script.js  main_page.style.css
frontend/src/: App.css  App.jsx  main.jsx
include/: Message.hpp  User.hpp
src/: Message.cpp  User.cpp  main.cpp
